--- a/index.html
+++ b/index.html
@@ -338,10 +338,11 @@ VERSION: v1.5.1-header-branding
   font-size:14px;
   line-height:1.6;
 ">
-  <strong>🏦 입금 계좌 안내</strong><br>
+<strong>🏦 입금 계좌 안내</strong><br>
 농협 301-0297-8175-81<br>
 예금주: 설성푸드<br><br>
 📞 매장문의: 02-830-0062
+
 
 </div>
 
@@ -522,6 +523,12 @@ ${items.map(i => {
 
 ※ 입금 후 본 주문문구를 채팅방에 남겨주세요
 
+────────────
+🎁 오늘도 설성 멤버십 안내
+월 1,990원으로 누리는 압도적 혜택
+👉 https://www.sulsungmall.com/goods/event_sale.php?sno=119
+────────────`;
+
 
 
 const orderStatusHTML =
@@ -582,6 +589,7 @@ copyBtn.onclick = () => {
 
 </body>
 </html>
+
 
 
 
