--- a/dev/index.html
+++ b/dev/index.html
@@ -231,7 +231,7 @@ VERSION: v1.5.1-header-branding
     color:#2f80ed;
     margin-bottom:8px;
   ">
-    현명한 소비 • 청담점 공동구매
+    현명한 소비의 시작
   </div>
 
   <!-- 주문 기간 -->
