--- a/dev/index.html
+++ b/dev/index.html
@@ -375,7 +375,7 @@ VERSION: v1.5.1-header-branding
 GAS 연동 설정
 ====================================================
 */
-const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxuGDqR555j_1Cgnh86oVWvUYgw9AzZ8Eg791TTiu9tbcwfNGpfmZYE23hmRArNuzHh/exec";
+const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbziVvtzExgrbn2Sn0y5aR81GtCwKQqeIWAfBXHX5ljGmNrtss1yK6DWmuxPVqj7acKs/exec;
 
 /*
 ====================================================
