--- a/dev/index.html
+++ b/dev/index.html
@@ -375,7 +375,7 @@ VERSION: v1.5.1-header-branding
 GAS 연동 설정
 ====================================================
 */
-const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbziVvtzExgrbn2Sn0y5aR81GtCwKQqeIWAfBXHX5ljGmNrtss1yK6DWmuxPVqj7acKs/exec;
+const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwDa6lM9vMjDMHYOvcTmp3VvYxiOwLVYeIFyP4SBQ6SJzZYKPnJvQjv-jatmE4P4O02/exec";
 
 /*
 ====================================================
