--- a/dev/index.html
+++ b/dev/index.html
@@ -271,9 +271,9 @@ VERSION: v1.5.1-header-branding
      data-product-id="P001">
   <img src="images/product1.png">
    <div class="product-body">
-    <div class="name">무항생제 한우 1등급 등심 200g</div>
+    <div class="name">1++등급 무항생제 한우사태300g</div>
     <div class="stock-badge">한정 50팩</div>
-    <div class="price">15,900원</div>
+    <div class="price">10,900원</div>
     <div class="qty-box">
       <button class="minus">-</button>
       <div class="qty">0</div>
@@ -286,8 +286,8 @@ VERSION: v1.5.1-header-branding
 <div class="product" data-price="9800">
   <img src="images/product2.png">
   <div class="product-body">
-    <div class="name">제주한돈 육포 50g × 4팩</div>
-    <div class="price">9,800원</div>
+    <div class="name">존쿡 크림치즈 쌀베이글 4개구성 </div>
+    <div class="price">10,000원</div>
     <div class="qty-box">
       <button class="minus">-</button>
       <div class="qty">0</div>
