--- a/dev/index.html
+++ b/dev/index.html
@@ -272,7 +272,7 @@ VERSION: v1.5.1-header-branding
 
 <!-- 상품 1 (한정수량) -->
 <div class="product limited"
-     data-id="p001"
+     data-product-id="p001"
      data-price="10900">
   <img src="images/product1.png">
    <div class="product-body">
