--- a/dev/index.html
+++ b/dev/index.html
@@ -623,6 +623,8 @@ orderMessage += "농협 301-0297-8175-81\n";
 orderMessage += "예금주: 설성푸드\n\n";
 orderMessage += "※ 입금 후 본 주문문구를 채팅방에 남겨주세요";
 
+   const result = null; // no-cors 운영: 응답을 읽지 않으므로 null 고정
+
 
 const orderStatusHTML =
 `<div style="
