--- a/dev/index.html
+++ b/dev/index.html
@@ -398,7 +398,7 @@ VERSION: v1.5.1-header-branding
 GAS 연동 설정
 ====================================================
 */
-const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbw7H3rDNebI7gGXzsBnvar0fEKEG6DJGE1guLl9h5lS8XitlMPx_2GIv0WOiqYOvpQh/exec";
+const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzH_sdNvBTA3TlROEsP6orcEftovLF1m3ZQQBeDQBlO22ZO9xxp3a2-lsAx826y_xbh/exec;
 
 /*
 ====================================================
