--- a/dev/index.html
+++ b/dev/index.html
@@ -270,8 +270,6 @@ VERSION: v1.5.1-header-branding
   </select>
 </div>
 <div class="field">
-  <label for="cashReceipt">현금 영수증</label>
-
   <div style="
     display:flex;
     align-items:center;
@@ -281,25 +279,13 @@ VERSION: v1.5.1-header-branding
     <input
       type="checkbox"
       id="cashReceipt"
-      style="
-        width:18px;
-        height:18px;
-        margin:0;
-        flex:0 0 auto;
-      "
+      style="width:18px; height:18px; margin:0;"
     >
-    <span style="
-      font-size:14px;
-      font-weight:600;
-      color:#333;
-      line-height:1.2;
-      white-space:nowrap;
-    ">
-      현금영수증 발급 원해요
+    <span style="font-size:14px; font-weight:600; color:#333;">
+      현금영수증 원해요
     </span>
   </div>
 </div>
-
 
 <!-- 상품 1 (한정수량) -->
 <div class="product limited"
