--- a/dev/index.html
+++ b/dev/index.html
@@ -599,7 +599,7 @@ const orderStatusHTML =
   margin:0;
   padding:0;
 ">
-✅ 감사합니다! 주문이 접수되었습니다. (주문번호: ${(result && result.order_no) ? result.order_no : "확인중"})
+✅ 감사합니다! 주문이 접수되었습니다.
 </div>`;
 
 orderText.value = orderMessage;
