--- a/dev/index.html
+++ b/dev/index.html
@@ -206,7 +206,7 @@ textarea {
   document.addEventListener("contextmenu", function (e) { e.preventDefault(); return false; });
   document.addEventListener("selectstart", function (e) { e.preventDefault(); return false; });
   document.addEventListener("dragstart", function (e) { e.preventDefault(); return false; });
-  document.addEventListener("copy", function (e) { e.preventDefault(); return false; });
+  //document.addEventListener("copy", function (e) { e.preventDefault(); return false; });
 
   document.addEventListener("keydown", function (e) {
     const key = (e.key || "").toLowerCase();
