--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@ VERSION: v1.5.1-header-branding
 GAS 연동 설정
 ====================================================
 */
-const SCRIPT_URL = "const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzKhIH1smdYwZ7HLACMFKVTArkLfRqvkKlVMiBszBcvZf3n7fv_1KGPssyzMplyo-K6/exec";
+const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzKhIH1smdYwZ7HLACMFKVTArkLfRqvkKlVMiBszBcvZf3n7fv_1KGPssyzMplyo-K6/exec";
 ";
 
 /*
@@ -680,5 +680,6 @@ copyBtn.onclick = () => {
 
 </body>
 </html>
+
 
 
