--- a/dev/index.html
+++ b/dev/index.html
@@ -316,15 +316,15 @@ VERSION: v1.5.1-header-branding
   </div>
 </div>
 
-<!-- 상품 1 (한정수량) -->
+<!-- 상품 1 -->
 <div class="product limited"
      data-product-id="p001"
-     data-price="10900">
+     data-price="6900">
   <img src="images/product1.png">
-   <div class="product-body">
-    <div class="name">1++등급 무항생제 한우사태 300g</div>
-    <div class="stock-badge">한정 50팩</div>
-    <div class="price">10,900원</div>
+  <div class="product-body">
+    <div class="name">설향딸기 500g (3×5 사이즈)</div>
+    <div class="stock-badge">한정 100팩 · 금요일 방문수령만</div>
+    <div class="price">6,900원</div>
     <div class="qty-box">
       <button class="minus">-</button>
       <div class="qty">0</div>
@@ -334,13 +334,14 @@ VERSION: v1.5.1-header-branding
 </div>
 
 <!-- 상품 2 -->
-<div class="product"
+<div class="product limited"
      data-product-id="p002"
-     data-price="10000">
+     data-price="99000">
   <img src="images/product2.png">
   <div class="product-body">
-    <div class="name">존쿡 크림치즈 쌀베이글 4개구성 </div>
-    <div class="price">10,000원</div>
+    <div class="name">설성한우 정성3호 세트</div>
+    <div class="stock-badge">한정 30세트</div>
+    <div class="price">99,000원</div>
     <div class="qty-box">
       <button class="minus">-</button>
       <div class="qty">0</div>
@@ -350,16 +351,14 @@ VERSION: v1.5.1-header-branding
 </div>
 
 <!-- 상품 3 -->
-
- <!--
-상품 3 임시 비활성 (내일 주문 제외)
-<div class="product"
+<div class="product limited"
      data-product-id="p003"
-     data-price="9900">
+     data-price="39980">
   <img src="images/product3.png">
   <div class="product-body">
-    <div class="name">우된장 한우된장찌개 밀키트 × 2</div>
-    <div class="price">9,900원</div>
+    <div class="name">우족탕 세트</div>
+    <div class="stock-badge">한정 30세트</div>
+    <div class="price">39,980원</div>
     <div class="qty-box">
       <button class="minus">-</button>
       <div class="qty">0</div>
@@ -367,19 +366,16 @@ VERSION: v1.5.1-header-branding
     </div>
   </div>
 </div>
--->
 
- 
 <!-- 상품 4 -->
- <!--
-상품 4 임시 비활성 (내일 주문 제외)
-<div class="product"
+<div class="product limited"
      data-product-id="p004"
-     data-price="19900">
+     data-price="39980">
   <img src="images/product4.png">
   <div class="product-body">
-    <div class="name">피터루거 스테이크 하우스 밀키트 × 4</div>
-    <div class="price">19,900원</div>
+    <div class="name">설성목장 제주 설성햄 선물세트</div>
+    <div class="stock-badge">한정 30세트</div>
+    <div class="price">39,980원</div>
     <div class="qty-box">
       <button class="minus">-</button>
       <div class="qty">0</div>
@@ -387,7 +383,24 @@ VERSION: v1.5.1-header-branding
     </div>
   </div>
 </div>
--->
+
+<!-- 상품 5 -->
+<div class="product limited"
+     data-product-id="p005"
+     data-price="79980">
+  <img src="images/product5.png">
+  <div class="product-body">
+    <div class="name">설성한우 명품 한우육포 선물세트</div>
+    <div class="stock-badge">한정 30세트</div>
+    <div class="price">79,980원</div>
+    <div class="qty-box">
+      <button class="minus">-</button>
+      <div class="qty">0</div>
+      <button class="plus">+</button>
+    </div>
+  </div>
+</div>
+
 
 <div class="total">
   총 합계: <span id="total">0</span>원
