--- a/dev/index.html
+++ b/dev/index.html
@@ -286,7 +286,7 @@ VERSION: v1.5.1-header-branding
 
 <div class="field">
   <label>오픈채팅 닉네임</label>
-  <input id="nickname" placeholder="카카오톡 닉네임">
+  <input id="nickname" placeholder="채팅방닉네임+전화번호뒷4자리">
 </div>
 
 <div class="field">
@@ -356,7 +356,7 @@ VERSION: v1.5.1-header-branding
      data-price="39980">
   <img src="images/product3.png">
   <div class="product-body">
-    <div class="name">우족탕 세트</div>
+    <div class="name">설성한우 우족탕 선물세트</div>
     <div class="stock-badge">한정 30세트</div>
     <div class="price">39,980원</div>
     <div class="qty-box">
